--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,15 @@
         android:text="樂透"
         android:textSize="30sp" />
 
+    <TextView
+        android:id="@+id/txvvb"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:onClick="Add"
+        android:text="震動"
+        android:textSize="36sp" />
+
     <ImageView
         android:id="@+id/img"
         android:layout_width="match_parent"
